[project]
name = "fusionamm-py"
version = "0.1.0"
description = "Interact with FusionAMM and parse transactions in Python"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anchorpy>=0.21.0",
    "base58>=2.1.1",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "pip>=25.3",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "tqdm>=4.67.1",
]
